--- a/save-points/00-get-started/BlazingPizza.Client/Pages/Checkout.razor
+++ b/save-points/00-get-started/BlazingPizza.Client/Pages/Checkout.razor
@@ -1,5 +1,7 @@
-﻿@page "/checkout"
+﻿@attribute [Authorize]
+@page "/checkout"
 @inject OrderState OrderState
+@inject OrdersClient OrdersClient
 @inject HttpClient HttpClient
 @inject NavigationManager NavigationManager
 
@@ -30,9 +32,20 @@
 @code {
     async Task PlaceOrder()
     {
-        var response = await HttpClient.PostAsJsonAsync("orders", OrderState.Order);
-        var newOrderId = await response.Content.ReadFromJsonAsync<int>();
-        OrderState.ResetOrder();
-        NavigationManager.NavigateTo($"myorders/{newOrderId}");
+        //var response = await HttpClient.PostAsJsonAsync("orders", OrderState.Order);
+        //var newOrderId = await response.Content.ReadFromJsonAsync<int>();
+        //OrderState.ResetOrder();
+        //NavigationManager.NavigateTo($"myorders/{newOrderId}");
+
+        try
+        {
+            var newOrderId = await OrdersClient.PlaceOrder(OrderState.Order);
+            OrderState.ResetOrder();
+            NavigationManager.NavigateTo($"myorders/{newOrderId}");
+        }
+        catch (AccessTokenNotAvailableException ex)
+        {
+            ex.Redirect();
+        }
     }
 }
